--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="game"></div>
+    <div id="game">
+        <div class="stats">
+            <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
+            <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
+            <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
+        </div>
+        <div class="controls"></div>
+        <div class="monsterStats"></div>
+        <div class="text"></div>
+    </div>
 
 <script src="js/script.js"></script>
 </body>
